--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 .env
+src/pages/admin/update_gallery.tsx
+src/pages/admin/update_gallery.tsx
+src/pages/admin/update_gallery.tsx
+src/pages/admin/update_gallery.tsx
